--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,20 +122,15 @@ h1 {
     .conteneur {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            grid-template-rows: repeat(4, 1fr);
+            /* grid-template-rows: repeat(3, 1fr); */
             grid-column-gap: 0px;
             grid-row-gap: 0px;
-            
-            
-            .fiveStars { grid-area: 1 / 2 / 3 / 4; }
-            .multipleAccounts { grid-area: 2 / 2 / 4 / 3; }
-            .scheduleContent { grid-area: 2 / 3 / 4 / 4; }
-            .scheduleSocialMedia { grid-area: 1 / 4 / 3 / 5; }
-            .growFollowers { grid-area: 4 / 3 / 5 / 5; }
-            .fasterAudience { grid-area: 4 / 2 / 5 / 3; }
-            .createSchedule { grid-area: 1 / 1 / 3 / 2; }
-            .aiContent { grid-area: 2 / 1 / 5 / 2; }
 
+            grid-template-areas: 
+            "sectionGauche fiveStars fiveStars scheduleSocialMedia"
+            "sectionGauche multipleAccounts scheduleContent scheduleSocialMedia"
+            "sectionGauche fasterAudience growFollowers growFollowers"
+        
     }
 }
 /* conteneur div */
@@ -143,8 +138,6 @@ h1 {
     border-radius: 1rem;
     margin: 1rem 2rem;
     background-color: var(--color-secondary);
-    /* min-height: 40rem; */
-    /* max-height: 40rem; */
     /* overflow: hidden; */
 }
 /* conteneur 1 */
@@ -152,6 +145,7 @@ h1 {
     padding: 1rem;
     color: var(--color-white);
     background-color: var(--color-primary);
+    grid-area: fiveStars;
 }
 .fiveStars h1 {
     padding: 0rem 5.5rem;
@@ -160,31 +154,47 @@ h1 {
 .conteneur div:nth-child(2) {
     background-color: var(--color-white);
     padding: 1rem;
+    grid-area: multipleAccounts;
 }
 /*conteneur 3 */
 .conteneur div:nth-child(3) {
     padding: 1rem;
     background-color: var(--color-secondary);
+    grid-area: scheduleContent;
 }
 /*conteneur 4 */
 .conteneur div:nth-child(4) {
     padding: 1rem;
+    grid-area: scheduleSocialMedia;
 }
 /*conteneur 5 */
 .conteneur div:nth-child(5) {
+    display:flex;
     padding: 1rem;
     background-color: var(--color-mauve-fonce);
+    grid-area: growFollowers;
+}
+.growFollowers img{
+    width:50%;
 }
 /*conteneur 6 */
 .conteneur div:nth-child(6) {
     padding: 1rem;
     background-color: var(--color-white);
+    grid-area: fasterAudience;
 }
-.conteneur div:nth-child(7) {
+.conteneur__sectionGauche {
+    grid-area: sectionGauche;
+    display:flex;
+    flex-wrap:wrap;
+}
+.conteneur__sectionGauche:first-child  {
     padding: 1rem;
     background-color: var(--color-jaune);
+    grid-area: createSchedule;
 }
-.conteneur div:last-child {
+.conteneur__sectionGauche:nth-child(2) {
     padding: 1rem;
     background-color: var(--color-jaune-fonce);
+    grid-area: aiContent;
 }
